<resources>
    <string name="app_name">NasaAppKotlin</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="item1">Список планет</string>
    <string name="item2">На экран 2</string>
    <string name="day_before_yesterday">Day before yesterday</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="select_application_theme">Select application theme</string>
    <string name="space">Space</string>
    <string name="moon">Moon</string>
    <string name="mars">Mars</string>


    <string name="day_before_yesterday_text">Day before yesterday</string>
    <string name="yesterday_text">Yesterday</string>
    <string name="today_text">Today</string>
    <string name="NameOfApp">NasaAppKotlin</string>
</resources>